remove newsletter tags

--- a/articles_parsed_with_html/baltimore-fire-children.html
+++ b/articles_parsed_with_html/baltimore-fire-children.html
@@ -1,91 +1,140 @@
 <div class="story-body story-body-1">
-<figure aria-label="media" class="promo media video lede layout-large-horizontal " data-adsensitivity="noads" data-autoplay="false" data-embedded="false" data-live="false" data-media-action="modal" data-videoid="100000004867586" role="group">
-<span class="visually-hidden">Video</span>
-<figcaption class="caption">
-<h4 class="headline">Fatal House Fire in Baltimore</h4>
-<div class="caption-video">
-<div class="summary-credit">
-<p class="summary">The body of one child has been found and five others were missing in northeast Baltimore, authorities said. A woman and three children were rescued and sent to the hospital.</p>
-<span class="credit video-credit" itemprop="copyrightHolder">
-                    By REUTERS.                                                        </span>
-<span class="credit photo-credit" itemprop="copyrightHolder">
-                    Photo by Patrick Semansky/Associated Press.
-                </span>
-<a class="video-link" href="https://www.nytimes.com/video/us/100000004867586/fatal-house-fire-in-baltimore.html?action=click&amp;contentCollection=us&amp;module=lede&amp;region=caption&amp;pgtype=article">Watch in Times Video »</a>
+ <figure aria-label="media" class="promo media video lede layout-large-horizontal " data-adsensitivity="noads" data-autoplay="false" data-embedded="false" data-live="false" data-media-action="modal" data-videoid="100000004867586" role="group">
+  <span class="visually-hidden">
+   Video
+  </span>
+  <figcaption class="caption">
+   <h4 class="headline">
+    Fatal House Fire in Baltimore
+   </h4>
+   <div class="caption-video">
+    <div class="summary-credit">
+     <p class="summary">
+      The body of one child has been found and five others were missing in northeast Baltimore, authorities said. A woman and three children were rescued and sent to the hospital.
+     </p>
+     <span class="credit video-credit" itemprop="copyrightHolder">
+      By REUTERS.
+     </span>
+     <span class="credit photo-credit" itemprop="copyrightHolder">
+      Photo by Patrick Semansky/Associated Press.
+     </span>
+     <a class="video-link" href="https://www.nytimes.com/video/us/100000004867586/fatal-house-fire-in-baltimore.html?action=click&amp;contentCollection=us&amp;module=lede&amp;region=caption&amp;pgtype=article">
+      Watch in Times Video »
+     </a>
+    </div>
+    <div class="sharetools-video-container">
+     <div class="sharetools sharetools-video-tools" id="sharetools-video-tools-100000004867586">
+      <ul>
+       <li class="sharetool embed-sharetool">
+        <a data-modal-title="" data-share="embed" href="javascript:;">
+         <i class="icon sprite-icon">
+         </i>
+         <span class="sharetool-text ">
+          embed
+         </span>
+        </a>
+       </li>
+      </ul>
+     </div>
+     <div class="sharetools sharetools-video-inline" data-content-type="video" data-description="The body of one child has been found and five others were missing in northeast Baltimore, authorities said. A woman and three children were rescued and sent to the hospital." data-shares="facebook|,twitter|" data-title="Fatal House Fire in Baltimore" data-url="https://www.nytimes.com/video/us/100000004867586/fatal-house-fire-in-baltimore.html?action=click&amp;contentCollection=us&amp;module=lede&amp;region=caption&amp;pgtype=article" id="sharetools-video-inline-100000004867586">
+     </div>
+    </div>
+   </div>
+  </figcaption>
+ </figure>
+ <p class="story-body-text story-content" data-para-count="164" data-total-count="164">
+  BALTIMORE — The bodies of six children were recovered after a fire engulfed a house in the northeast section of Baltimore early on Thursday, a fire official said.
+ </p>
+ <p class="story-body-text story-content" data-para-count="300" data-total-count="464">
+  Their mother and her three other children escaped the home and were being treated at a hospital, said Chief Roman Clark, a spokesman for the Baltimore City Fire Department. A 9-month-old boy, a 2-year-old boy, two 3-year-old twin girls, and two other girls, ages 10 and 11, died in the fire, he said.
+ </p>
+ <p class="story-body-text story-content" data-para-count="148" data-total-count="612">
+  One of the children who was hospitalized, an 8-year-old girl, had helped her 4- and 5-year-old siblings flee, Chief Clark said at a news conference.
+ </p>
+ <p class="story-body-text story-content" data-para-count="284" data-total-count="896">
+  Representative Elijah E. Cummings, Democrat of Maryland, identified the mother as Katie Malone, who has worked in his Catonsville office for nearly 11 years. “She dutifully serves my constituents in the areas of immigration, postal services and the military,” he said in an email.
+ </p>
+ <div class="story-ad ad ad-placeholder nocontent robots-nocontent " id="story-ad-1">
+ </div>
+ <p class="story-body-text story-content" data-para-count="170" data-total-count="1066" id="story-continues-1">
+  Mr. Cummings and Chief Clark said Ms. Malone was the mother of the nine children. Mr. Cummings told reporters at an event in Baltimore that he had spoken with her family.
+ </p>
 </div>
-<div class="sharetools-video-container">
-<div class="sharetools sharetools-video-tools" id="sharetools-video-tools-100000004867586">
-<ul>
-<li class="sharetool embed-sharetool">
-<a data-modal-title="" data-share="embed" href="javascript:;">
-<i class="icon sprite-icon"></i>
-<span class="sharetool-text ">embed</span>
-</a>
-</li>
-</ul>
-</div>
-<div class="sharetools sharetools-video-inline" data-content-type="video" data-description="The body of one child has been found and five others were missing in northeast Baltimore, authorities said. A woman and three children were rescued and sent to the hospital." data-shares="facebook|,twitter|" data-title="Fatal House Fire in Baltimore" data-url="https://www.nytimes.com/video/us/100000004867586/fatal-house-fire-in-baltimore.html?action=click&amp;contentCollection=us&amp;module=lede&amp;region=caption&amp;pgtype=article" id="sharetools-video-inline-100000004867586">
-</div>
-</div>
-</div>
-</figcaption>
-</figure>
-<p class="story-body-text story-content" data-para-count="164" data-total-count="164">BALTIMORE — The bodies of six children were recovered after a fire engulfed a house in the northeast section of Baltimore early on Thursday, a fire official said.</p><p class="story-body-text story-content" data-para-count="300" data-total-count="464">Their mother and her three other children escaped the home and were being treated at a hospital, said Chief Roman Clark, a spokesman for the Baltimore City Fire Department. A 9-month-old boy, a 2-year-old boy, two 3-year-old twin girls, and two other girls, ages 10 and 11, died in the fire, he said.</p><p class="story-body-text story-content" data-para-count="148" data-total-count="612">One of the children who was hospitalized, an 8-year-old girl, had helped her 4- and 5-year-old siblings flee, Chief Clark said at a news conference.</p><p class="story-body-text story-content" data-para-count="284" data-total-count="896">Representative Elijah E. Cummings, Democrat of Maryland, identified the mother as Katie Malone, who has worked in his Catonsville office for nearly 11 years. “She dutifully serves my constituents in the areas of immigration, postal services and the military,” he said in an email.</p><div class="story-ad ad ad-placeholder nocontent robots-nocontent " id="story-ad-1">
 
-
-</div>
-<p class="story-body-text story-content" data-para-count="170" data-total-count="1066" id="story-continues-1">Mr. Cummings and Chief Clark said Ms. Malone was the mother of the nine children. Mr. Cummings told reporters at an event in Baltimore that he had spoken with her family.</p> 
-</div>
 <div class="story-body story-body-2">
-<p class="story-body-text story-content" data-para-count="164" data-total-count="1230" id="story-continues-3">“They’re still trying to wrap their arms around this, but we have made clear our office is going to do every single thing in our power” to help them, he said.</p><p class="story-body-text story-content" data-para-count="84" data-total-count="1314">Chief Clark said the father of the children had been at work when the fire happened.</p><p class="story-body-text story-content" data-para-count="225" data-total-count="1539">Firefighters arrived at the house, in the Cedmont neighborhood, at about 12:30 a.m. and saw the three-story building on fire. Chief Clark said the third floor had collapsed onto the second, and then the second onto the first.</p><div aria-labeledby="newsletter-promo-heading" class="newsletter-signup hidden auto-newsletter variant-1-hidden " data-newsletter-productcode="" data-newsletter-producttitle="" id="newsletter-promo">
-<h2 class="visually-hidden" id="newsletter-promo-heading">Newsletter Sign Up</h2>
-
-
-<h3 class="headline"></h3> <p class="summary"></p> <form autocomplete="off" class="newsletter-form" method="post" name="regilite">
-<div class="control input-control">
-<div class="form-errors">
-<p class="error captcha-error hidden">Please verify you're not a robot by clicking the box.</p>
-<p class="error invalid-email-error hidden">Invalid email address. Please re-enter.</p>
-<p class="error buffet-error hidden">You must select a newsletter to subscribe to.</p>
-</div>
-<div class="field-container">
-<input aria-required="true" class="email-input" id="email" name="email" placeholder="Enter your email address" type="email" value="">
-<button class="button submit-button" id="submit-button" type="submit">Sign Up</button>
-</input></div>
-</div><!-- close control -->
-<div class="control checkbox-control">
-<div class="field-container">
-<input class="checkbox" id="special-offers" name="special-offers" type="checkbox" value="MM">
-</input></div>
-<div class="label-container">
-<label class="checkbox-label" for="special-offers">You agree to receive occasional updates and special offers for The New York Times's products and services.</label>
-</div>
-</div><!-- close control -->
-<div class="g-recaptcha" data-sitekey="6LeN0R4TAAAAACwPa5WX2QYE0npOf2-2veTOm2Tp" id="captcha-container"></div>
-</form>
-<div class="messages">
-<h3 class="success-message hidden">Thank you for subscribing.</h3>
-<h3 class="error submit-error hidden">An error has occurred. Please try again later.</h3>
-<h3 class="subscriber hidden">You are already subscribed to this email.</h3>
-<p class="view-all-link hidden"><a href="/newsletters" target="_blank">View all New York Times newsletters.</a></p>
-</div><!-- close messages -->
-<ul class="footer">
-<li class="sample" id="sample-newsletter-link"><a href="" target="_blank">See Sample</a></li>
-<li class="manage-email"><a href="/mem/email.html" target="_blank">Manage Email Preferences</a></li>
-<li class="logout hidden"><a href="/logout" target="_blank">Not you?</a></li>
-<li class="privacy"><a href="/privacy" target="_blank">Privacy Policy</a></li>
-<li class="contact">Opt out or <a href="/help/index.html" target="_blank">contact us</a> anytime</li>
-</ul><!-- close footer -->
-
-</div>
-<div id="#continues-post-newsletter"></div>
-<p class="story-body-text story-content" data-para-count="157" data-total-count="1696">After the flames were extinguished, he said, the authorities brought in an excavator and began clearing the debris, using cadaver dogs to help in the search.</p><p class="story-body-text story-content" data-para-count="195" data-total-count="1891">Chief Clark said that Ms. Malone and the 4- and 5-year-old children were in critical condition in the hospital, and that the 8-year-old was in serious condition but could be released on Thursday.</p><p class="story-body-text story-content" data-para-count="54" data-total-count="1945">The cause of the fire is under investigation, he said.</p><p class="story-body-text story-content" data-para-count="142" data-total-count="2087">Jenna Wiggins, who lives two doors from the house where the fire broke out, said firefighters had been forced to back off as the flames raged.</p><p class="story-body-text story-content" data-para-count="228" data-total-count="2315">“The whole house just collapsed,” she said. “Every time it looked like the flames went down, they just came back up again, and the roof fell in, and then one floor fell onto the floor below, and the house was just gone.”</p><p class="story-body-text story-content" data-para-count="82" data-total-count="2397">Ms. Wiggins recalled seeing the children playing outside and saying hello to them.</p><p class="story-body-text story-content" data-para-count="68" data-total-count="2465">“It’s just so hard, knowing the children have died,” she said.</p><p class="story-body-text story-content" data-para-count="367" data-total-count="2832">Officials at Epiphany Lutheran Church, less than two blocks from the home, said all the children had attended a school affiliated with the church. But the officials and parents who milled around outside declined to comment out of deference to the family. The church is well known for a red neon sign on its roof that is visible for miles. It reads, “God Is Love.”</p><footer class="story-footer story-content">
-<div class="story-meta">
-<div class="story-notes"><p>Gary Gately reported from Baltimore, and Christine Hauser from New York. Eric Lichtblau contributed reporting from Baltimore, and Christopher Mele from New York.</p></div>
-<p class="story-print-citation">A version of this article appears in print on January 13, 2017, on Page A21 of the <span itemprop="printEdition">New York edition</span> with the headline: 6 Children of Congressional Aide Die in Baltimore Fire. <span class="story-footer-links"> <span><a href="http://www.nytreprints.com/" target="_blank">Order Reprints</a><span class="pipe">|</span></span> <span><a href="http://www.nytimes.com/pages/todayspaper/index.html" target="_blank">Today's Paper</a><span class="pipe">|</span></span><span><a href="http://www.nytimes.com/subscriptions/Multiproduct/lp839RF.html?campaignId=48JQY" target="_blank">Subscribe</a></span>
-</span>
-</p>
-</div><!-- close story-meta -->
-</footer>
-
+ <p class="story-body-text story-content" data-para-count="164" data-total-count="1230" id="story-continues-3">
+  “They’re still trying to wrap their arms around this, but we have made clear our office is going to do every single thing in our power” to help them, he said.
+ </p>
+ <p class="story-body-text story-content" data-para-count="84" data-total-count="1314">
+  Chief Clark said the father of the children had been at work when the fire happened.
+ </p>
+ <p class="story-body-text story-content" data-para-count="225" data-total-count="1539">
+  Firefighters arrived at the house, in the Cedmont neighborhood, at about 12:30 a.m. and saw the three-story building on fire. Chief Clark said the third floor had collapsed onto the second, and then the second onto the first.
+ </p>
+ <div id="#continues-post-newsletter">
+ </div>
+ <p class="story-body-text story-content" data-para-count="157" data-total-count="1696">
+  After the flames were extinguished, he said, the authorities brought in an excavator and began clearing the debris, using cadaver dogs to help in the search.
+ </p>
+ <p class="story-body-text story-content" data-para-count="195" data-total-count="1891">
+  Chief Clark said that Ms. Malone and the 4- and 5-year-old children were in critical condition in the hospital, and that the 8-year-old was in serious condition but could be released on Thursday.
+ </p>
+ <p class="story-body-text story-content" data-para-count="54" data-total-count="1945">
+  The cause of the fire is under investigation, he said.
+ </p>
+ <p class="story-body-text story-content" data-para-count="142" data-total-count="2087">
+  Jenna Wiggins, who lives two doors from the house where the fire broke out, said firefighters had been forced to back off as the flames raged.
+ </p>
+ <p class="story-body-text story-content" data-para-count="228" data-total-count="2315">
+  “The whole house just collapsed,” she said. “Every time it looked like the flames went down, they just came back up again, and the roof fell in, and then one floor fell onto the floor below, and the house was just gone.”
+ </p>
+ <p class="story-body-text story-content" data-para-count="82" data-total-count="2397">
+  Ms. Wiggins recalled seeing the children playing outside and saying hello to them.
+ </p>
+ <p class="story-body-text story-content" data-para-count="68" data-total-count="2465">
+  “It’s just so hard, knowing the children have died,” she said.
+ </p>
+ <p class="story-body-text story-content" data-para-count="367" data-total-count="2832">
+  Officials at Epiphany Lutheran Church, less than two blocks from the home, said all the children had attended a school affiliated with the church. But the officials and parents who milled around outside declined to comment out of deference to the family. The church is well known for a red neon sign on its roof that is visible for miles. It reads, “God Is Love.”
+ </p>
+ <footer class="story-footer story-content">
+  <div class="story-meta">
+   <div class="story-notes">
+    <p>
+     Gary Gately reported from Baltimore, and Christine Hauser from New York. Eric Lichtblau contributed reporting from Baltimore, and Christopher Mele from New York.
+    </p>
+   </div>
+   <p class="story-print-citation">
+    A version of this article appears in print on January 13, 2017, on Page A21 of the
+    <span itemprop="printEdition">
+     New York edition
+    </span>
+    with the headline: 6 Children of Congressional Aide Die in Baltimore Fire.
+    <span class="story-footer-links">
+     <span>
+      <a href="http://www.nytreprints.com/" target="_blank">
+       Order Reprints
+      </a>
+      <span class="pipe">
+       |
+      </span>
+     </span>
+     <span>
+      <a href="http://www.nytimes.com/pages/todayspaper/index.html" target="_blank">
+       Today's Paper
+      </a>
+      <span class="pipe">
+       |
+      </span>
+     </span>
+     <span>
+      <a href="http://www.nytimes.com/subscriptions/Multiproduct/lp839RF.html?campaignId=48JQY" target="_blank">
+       Subscribe
+      </a>
+     </span>
+    </span>
+   </p>
+  </div>
+  <!-- close story-meta -->
+ </footer>
 </div>
